# K-00002

./: Makefile  README.md  main.py  pyproject.toml
src/: main.py
src/aggregates/text_to_embeddings/dto/: Embedding1DDTO.py  EmbeddingMetadataDTO.py  TokenizeDTO.py
src/aggregates/text_to_embeddings/services/: __init__.py  embedding.py  embedding_to_db.py  text_to_db.py  text_to_embedding.py  tokenize.py
src/app/: init.py
src/models/embedding/: __init__.py
src/shared/: types.py
src/shared/api/: __init__.py  _qdrant_client.py
src/shared/configs/: __init__.py  _get_device.py  _log.py  _settings.py  logger_config.py
src/shared/libs/tsid/: __init__.py  _create_tsid.py
