[project]
name = "k-00002"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.16.2",
    "structlog>=25.5.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers[torch]>=4.57.3",
    "tsidpy>=1.1.5",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "huggingface-hub>=0.36.0",
]
